--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".CarreraListadoActivity"
             android:label="@string/title_activity_listado_grado" >
+        </activity>
+        <activity
+            android:name=".LaboratorioListadoActivity"
+            android:label="@string/title_activity_laboratorio_listado" >
         </activity>
     </application>
 
