--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,21 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
-        <activity
-            android:name=".IncidenciaActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.INCIDENCIA" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-=======
-
         <activity
             android:name=".CarreraListadoActivity"
             android:label="@string/title_activity_listado_grado" >
->>>>>>> master
+        </activity>
+        <activity
+            android:name=".LaboratorioListadoActivity"
+            android:label="@string/title_activity_laboratorio_listado" >
         </activity>
     </application>
 
