--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".CarreraListadoActivity"
             android:label="@string/title_activity_listado_grado" >
         </activity>
+        <activity
+            android:name=".AsignaturaListadoActivity"
+            android:label="@string/title_activity_asignatura_listado" >
+        </activity>
     </application>
 
 </manifest>
