--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,9 +26,14 @@
             android:name=".AsignaturaListadoActivity"
             android:label="@string/title_activity_asignatura_listado" >
         </activity>
-
+        <activity android:name=".IncidenciaActivity" >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
-            android:name=".IncidenciaActivity" >
+            android:name=".LaboratorioListado_Activity"
+            android:label="@string/title_activity_laboratorio_listado_" >
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
