--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AsignaturaPantalla"
+            android:label="@string/title_activity_asignatura_pantalla" >
+        </activity>
     </application>
 
 </manifest>
