--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".CarreraListadoActivity"
@@ -41,6 +40,9 @@
         <activity
             android:name=".ProfesorListadoActivity"
             android:label="@string/title_activity_profesor_lisatdo" >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".InicioActivity"
@@ -58,6 +60,10 @@
         <activity
             android:name=".ProfesorPantalla"
             android:label="@string/title_activity_profesor_pantalla" >
+        </activity>
+        <activity
+            android:name=".PerfilActivity"
+            android:label="@string/title_activity_perfil" >
         </activity>
     </application>
 
