--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".CarreraListadoActivity"
@@ -47,11 +52,6 @@
         <activity
             android:name=".InicioActivity"
             android:label="@string/title_activity_inicio" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".RegistroActivity"
@@ -62,8 +62,12 @@
             android:label="@string/title_activity_profesor_pantalla" >
         </activity>
         <activity
-            android:name=".PerfilActivity"
+            android:name=".ayudanosActivity"
             android:label="@string/title_activity_perfil" >
+        </activity>
+        <activity
+            android:name=".CorreoProfesor"
+            android:label="@string/title_activity_correo_profesor" >
         </activity>
     </application>
 
