--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "nemesis.diiscover"
         minSdkVersion 17
         targetSdkVersion 22
-        versionCode 5
-        versionName "1.2.2"
+        versionCode 7
+        versionName "1.2.4"
     }
     buildTypes {
         release {
@@ -20,11 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.0.+'
     compile files('src/main/libs/mysql-connector-java-5.1.36-bin.jar')
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
+    compile files('libs/jsoup-1.8.3.jar')
 }
