--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.0"
-
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+    }
     defaultConfig {
         applicationId "nemesis.diiscover"
         minSdkVersion 17
         targetSdkVersion 22
-        versionCode 7
-        versionName "1.2.4"
+        versionCode 9
+        versionName "1.2.5"
     }
     buildTypes {
         release {
@@ -28,4 +29,5 @@ dependencies {
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/jsoup-1.8.3.jar')
+    compile files('libs/commons-codec-1.3.jar')
 }
